--- a/crePostgis/Dockerfile
+++ b/crePostgis/Dockerfile
@@ -3,15 +3,16 @@
 FROM tamboraorg/crepostgres
 MAINTAINER Michael Kahle <michael.kahle@yahoo.de>
 
-ENV POSTGIS_MAJOR 2.3
+#ENV POSTGIS_MAJOR 2.3
+ENV POSTGIS_MAJOR 2.2
 #ENV POSTGIS_VERSION 2.3.2+dfsg-1~exp2.pgdg80+1
-ENV POSTGIS_VERSION 2.3.2+dfsg-1~exp2.pgdg16.04+1
+#ENV POSTGIS_VERSION 2.3.2+dfsg-1~exp2.pgdg16.04+1
 
 RUN apt-get update \
       && apt-get install -y --no-install-recommends \
-           postgresql-$PG_MAJOR-postgis-$POSTGIS_MAJOR=$POSTGIS_VERSION \
-           postgresql-$PG_MAJOR-postgis-$POSTGIS_MAJOR-scripts=$POSTGIS_VERSION \
-           postgis=$POSTGIS_VERSION \
+           postgresql-$PG_MAJOR-postgis-$POSTGIS_MAJOR \
+           postgresql-$PG_MAJOR-postgis-$POSTGIS_MAJOR-scripts \
+           postgis \
       && rm -rf /var/lib/apt/lists/*
 
 RUN mkdir -p /docker-entrypoint-initdb.d
