Use variable for Postgres Version as defined

--- a/crePostgis/Dockerfile
+++ b/crePostgis/Dockerfile
@@ -10,9 +10,9 @@ ENV POSTGIS_MAJOR 2.2
 
 RUN apt-get update 
 RUN apt-get install -y --no-install-recommends \
-           postgresql-$PG_MAJOR-postgis-$POSTGIS_MAJOR 
+           postgresql-$PG_VERSION-postgis-$POSTGIS_MAJOR 
 RUN apt-get install -y --no-install-recommends \
-           postgresql-$PG_MAJOR-postgis-$POSTGIS_MAJOR-scripts 
+           postgresql-$PG_VERSION-postgis-$POSTGIS_MAJOR-scripts 
 RUN apt-get install -y --no-install-recommends \
            postgis 
 RUN rm -rf /var/lib/apt/lists/*
