--- a/creJenkins/Dockerfile
+++ b/creJenkins/Dockerfile
@@ -15,12 +15,13 @@ ENV LANG en_US.UTF-8
 
 RUN wget -qO - http://pkg.jenkins-ci.org/debian/jenkins-ci.org.key | sudo apt-key add - && \
     echo 'deb http://pkg.jenkins-ci.org/debian binary/' \
-      | tee /etc/apt/sources.list.d/jenkins.list && \
-    apt-get update && \
-    apt-get install --no-install-recommends -y jenkins && \
-    apt-get clean && \
-    rm -rf /var/lib/apt/lists/* && \
-    update-rc.d -f jenkins disable
+      | tee /etc/apt/sources.list.d/jenkins.list 
+
+RUN apt-get update 
+RUN apt-get install --no-install-recommends -y jenkins 
+RUN apt-get clean 
+RUN rm -rf /var/lib/apt/lists/* 
+RUN update-rc.d -f jenkins disable
 
 ENV JENKINS_HOME /var/jenkins
 
