--- a/creJenkins/Dockerfile
+++ b/creJenkins/Dockerfile
@@ -13,9 +13,13 @@ ENV DEBIAN_FRONTEND noninteractive
 ENV INITRD No
 ENV LANG en_US.UTF-8
 
-RUN wget -qO - http://pkg.jenkins-ci.org/debian/jenkins-ci.org.key | sudo apt-key add - && \
-    echo 'deb http://pkg.jenkins-ci.org/debian binary/' \
-      | tee /etc/apt/sources.list.d/jenkins.list 
+
+RUN wget -q -O - https://pkg.jenkins.io/debian/jenkins-ci.org.key | sudo apt-key add -
+RUN echo deb https://pkg.jenkins.io/debian-stable binary/ | sudo tee /etc/apt/sources.list.d/jenkins.list
+
+#RUN wget -qO - http://pkg.jenkins-ci.org/debian/jenkins-ci.org.key | sudo apt-key add - && \
+#    echo 'deb http://pkg.jenkins-ci.org/debian binary/' \
+#      | tee /etc/apt/sources.list.d/jenkins.list 
 
 RUN apt-get update 
 RUN apt-get install --no-install-recommends -y jenkins 
