--- a/crePhp/Dockerfile_old
+++ b/crePhp/Dockerfile_old
@@ -11,19 +11,21 @@ FROM tamboraorg/creubuntu
 ENV TERM=linux
 
 # Install cURL and nano
-#RUN apt-get update \
-#    && apt-get install -y --no-install-recommends curl ca-certificates nano \
-#    && apt-get clean \
-#&& rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/* /usr/share/doc/*
+RUN apt-get update \
+    && apt-get install -y --no-install-recommends curl ca-certificates nano \
+    && apt-get clean \
+&& rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/* /usr/share/doc/*
 
 # Install dotdeb repo, PHP7, composer and selected extensions
-RUN apt-get update \
-    && apt-get -y --no-install-recommends install php7.1-cli php7.1-apcu php7.1-apcu-bc php7.1-curl \
-        php7.1-json php7.1-mcrypt php7.1-opcache php7.1-readline php7.1-xml php7.1-zip \
-#    && curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer \
-#    && apt-get clean \
-#    && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/* /usr/share/doc/* ~/.composer
- 
+RUN echo "deb http://packages.dotdeb.org jessie all" > /etc/apt/sources.list.d/dotdeb.list \
+    && curl -sS https://www.dotdeb.org/dotdeb.gpg | apt-key add - \
+    && apt-get update \
+    && apt-get -y --no-install-recommends install php7.0-cli php7.0-apcu php7.0-apcu-bc php7.0-curl \
+        php7.0-json php7.0-mcrypt php7.0-opcache php7.0-readline php7.0-xml php7.0-zip \
+    && curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer \
+    && apt-get clean \
+    && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/* /usr/share/doc/* ~/.composer
+
 CMD ["php", "-a"]
 
 # If you'd like to be able to use this container on a docker-compose environment as a quiescent PHP CLI container
@@ -33,7 +35,7 @@ CMD ["php", "-a"]
 
 # Install FPM
 RUN apt-get update \
-    && apt-get -y --no-install-recommends install php7.1-fpm \
+    && apt-get -y --no-install-recommends install php7.0-fpm \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/* /usr/share/doc/*
 
@@ -41,7 +43,7 @@ RUN apt-get update \
 RUN usermod -u 1000 www-data
 
 # PHP-FPM packages need a nudge to make them docker-friendly
-COPY overrides.conf /etc/php/7.1/fpm/pool.d/z-overrides.conf
+COPY overrides.conf /etc/php/7.0/fpm/pool.d/z-overrides.conf
 
 # PHP-FPM has really dirty logs, certainly not good for dockerising
 # The following startup script contains some magic to clean these up
@@ -53,7 +55,7 @@ EXPOSE 9000
 
 # Install selected extensions and other stuff
 RUN apt-get update \
-    && apt-get -y --no-install-recommends install  php7.1-gd php7.1-mbstring php7.1-memcached php7.1-mongodb php7.1-pgsql php7.1-imagick php7.1-ssh2 php7.1-xdebug \
+    && apt-get -y --no-install-recommends install  php7.0-gd php7.0-mbstring php7.0-memcached php7.0-mongodb php7.0-pgsql php7.0-imagick php7.0-ssh2 php7.0-xdebug \
     && apt-get clean; rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/* /usr/share/doc/*
 
 
