--- a/creProxy/Dockerfile
+++ b/creProxy/Dockerfile
@@ -10,6 +10,9 @@ COPY app/network_internal.conf /etc/nginx/
 COPY app /app
 WORKDIR /app/
 
+COPY mk.txt /etc
+COPY creProxy/mk.txt /etc
+
 ENV DOCKER_HOST unix:///tmp/docker.sock
 
 VOLUME ["/etc/nginx/certs", "/etc/nginx/dhparam"]
