--- a/creProxy/Dockerfile
+++ b/creProxy/Dockerfile
@@ -16,6 +16,6 @@ ENV DOCKER_HOST unix:///tmp/docker.sock
 
 VOLUME ["/etc/nginx/certs", "/etc/nginx/dhparam"]
 
-#ENTRYPOINT ["/app/docker-entrypoint.sh"]
-#CMD ["shoreman", "start", "-r"]
+ENTRYPOINT ["/app/docker-entrypoint.sh"]
+CMD ["shoreman", "start", "-r"]
 
