Add versions.txt file to analyze dependencies

--- a/creProxy/Dockerfile
+++ b/creProxy/Dockerfile
@@ -3,7 +3,8 @@ FROM tamboraorg/crenginx
  
 #Adapted from https://github.com/jwilder/nginx-proxy
 
-RUN touch /usr/local/bin/mkc5.txt
+RUN touch /app/versions.txt
+echo "$(date +'%F %R%t') creProxy" >> /app/versions.txt
 
 RUN apt-get update; apt-get install -y openssl
 
