--- a/creUbuntu/Dockerfile
+++ b/creUbuntu/Dockerfile
@@ -10,8 +10,8 @@ FROM ubuntu:16.04
 ENV UBUNTU_VERSION 16.04
 ENV DOCKER_GEN_VERSION 0.7.4
 
-RUN touch /app/versions.txt
-echo "$(date +'%F %R%t') creUbuntu $(lsb_release -d -s)" >> /app/versions.txt
+RUN touch /app/versions.txt && \
+    echo "$(date +'%F %R%t') creUbuntu $(lsb_release -d -s)" >> /app/versions.txt
 
 # Install.
 RUN \
