mkdir if needed

--- a/creNginx/Dockerfile
+++ b/creNginx/Dockerfile
@@ -17,7 +17,7 @@ RUN \
   sed -i 's/worker_processes  1/worker_processes  auto/' /etc/nginx/nginx.conf && \
   chown -R www-data:www-data /var/lib/nginx
 
-RUN touch /app/versions.txt && \
+RUN mkdir -p /app && touch /app/versions.txt && \
     echo "$(date +'%F %R%t') creNginx $(nginx -v)" >> /app/versions.txt
 
 # Define mountable directories.
