--- a/creUbuntu/Dockerfile
+++ b/creUbuntu/Dockerfile
@@ -35,6 +35,8 @@ RUN wget https://github.com/jwilder/docker-gen/releases/download/$DOCKER_GEN_VER
  && tar -C /usr/local/bin -xvzf docker-gen-linux-amd64-$DOCKER_GEN_VERSION.tar.gz \
  && rm /docker-gen-linux-amd64-$DOCKER_GEN_VERSION.tar.gz
 
+RUN echo "$(date +'%F %R%t') docker-gen $(docker-gen -version)" >> /app/versions.txt
+
 # Copy shoremen to handle Procfile (Process Managment)
 COPY shoreman.sh /usr/local/bin/shoreman
 RUN chmod 755 /usr/local/bin/shoreman
