--- a/creUbuntu/Dockerfile
+++ b/creUbuntu/Dockerfile
@@ -10,8 +10,9 @@ FROM ubuntu:16.04
 ENV UBUNTU_VERSION 16.04
 ENV DOCKER_GEN_VERSION 0.7.4
 
-RUN mkdir -p /app && touch /app/versions.txt && ./etc/os-release && \
-    echo "$(date +'%F %R%t') creUbuntu $PRETTY_NAME" >> /app/versions.txt
+RUN mkdir -p /app && touch /app/versions.txt && \
+    env "$(cat /usr/lib/os-release | grep PRETTY)" && \ 
+    echo "$(date +'%F %R%t') creUbuntu2 $PRETTY_NAME" >> /app/versions.txt
 
 # Install.
 RUN \
