--- a/creProxy/Dockerfile
+++ b/creProxy/Dockerfile
@@ -10,8 +10,10 @@ RUN apt-get update; apt-get install -y openssl
 
 RUN echo "$(date +'%F %R%t') $(openssl version)" >> /app/versions.txt
 
+
 RUN mkdir -p /app && touch /app/versions.txt && \
-    echo "$(date +'%F %R%t') creUbuntu3 $(cat /usr/lib/os-release | grep PRETTY)" >> /app/versions.txt
+    echo -e "$(date +'%F %R') \t creUbuntuT \t $(cat /usr/lib/os-release | grep PRETTY)" >> /app/versions.txt
+
 
 COPY app/network_internal.conf /etc/nginx/
 
