--- a/creProxy/Dockerfile
+++ b/creProxy/Dockerfile
@@ -4,16 +4,11 @@ FROM tamboraorg/crenginx
 #Adapted from https://github.com/jwilder/nginx-proxy
 
 RUN mkdir -p /app && touch /app/versions.txt && \
-    echo "$(date +'%F %R%t') creProxy" >> /app/versions.txt
+    echo "$(date +'%F %R') \t creProxy \t " >> /app/versions.txt
 
 RUN apt-get update; apt-get install -y openssl
 
 RUN echo "$(date +'%F %R%t') $(openssl version)" >> /app/versions.txt
-
-
-RUN mkdir -p /app && touch /app/versions.txt && \
-    echo -e "$(date +'%F %R') \t creUbuntuT \t $(cat /usr/lib/os-release | grep PRETTY)" >> /app/versions.txt
-
 
 COPY app/network_internal.conf /etc/nginx/
 
