Format version string

--- a/creUbuntu/Dockerfile
+++ b/creUbuntu/Dockerfile
@@ -11,7 +11,7 @@ ENV UBUNTU_VERSION 16.04
 ENV DOCKER_GEN_VERSION 0.7.4
 
 RUN mkdir -p /app && touch /app/versions.txt && \
-    echo "$(date +'%F %R') \t creUbuntu \t $(cat /usr/lib/os-release | grep PRETTY | sed -e "s/^PRETTY_NAME=\"//" -e "s/\"$//")" >> /app/versions.txt
+    echo "$(date +'%F %R') \t creUbuntu \t $(cat /usr/lib/os-release | grep PRETTY | sed -e "s/^PRETTY_NAME=\"Ubuntu //" -e "s/\"$//")" >> /app/versions.txt
 
 # Install.
 RUN \
@@ -35,7 +35,7 @@ RUN wget https://github.com/jwilder/docker-gen/releases/download/$DOCKER_GEN_VER
  && tar -C /usr/local/bin -xvzf docker-gen-linux-amd64-$DOCKER_GEN_VERSION.tar.gz \
  && rm /docker-gen-linux-amd64-$DOCKER_GEN_VERSION.tar.gz
 
-RUN echo "$(date +'%F %R') \t docker-gen \t $(docker-gen -version)" >> /app/versions.txt
+RUN echo "$(date +'%F %R') \t  docker-gen \t $(docker-gen -version)" >> /app/versions.txt
 
 # Copy shoremen to handle Procfile (Process Managment)
 COPY shoreman.sh /usr/local/bin/shoreman
