First install certbot silent, then inquire version

--- a/creProxy/Dockerfile
+++ b/creProxy/Dockerfile
@@ -9,10 +9,12 @@ RUN add-apt-repository ppa:certbot/certbot; apt-get update; apt-get install -y o
 RUN wget https://dl.eff.org/certbot-auto && \
     mv certbot-auto /usr/local/bin/ && \
     chmod 755 /usr/local/bin/certbot-auto
-  
+# RUN /usr/local/bin/certbot-auto --noninteractive --install-only   
+RUN /usr/local/bin/certbot-auto --noninteractive --version  
+
 RUN echo "$(date +'%F %R') \t  $(openssl version)" >> /app/versions.txt
-# RUN echo "$(date +'%F %R') \t  $(/usr/local/bin/certbot-auto --version)" >> /app/versions.txt
-# RUN ./certbot-auto --install-only 
+RUN echo "$(date +'%F %R') \t  $(/usr/local/bin/certbot-auto --version)" >> /app/versions.txt
+
 # /usr/local/bin/cerbot-auto --no-self-upgrade ; certbot --nginx
  
 COPY app/network_internal.conf /etc/nginx/
