--- a/creNeo4j/Dockerfile
+++ b/creNeo4j/Dockerfile
@@ -4,9 +4,8 @@ FROM tamboraorg/crejava
 # https://github.com/docker-library/docs/tree/master/neo4j
 # https://github.com/neo4j/docker-neo4j-publish/blob/master/3.3.3/enterprise/Dockerfile
 
-RUN apk add --no-cache --quiet \
-    bash \
-    curl
+RUN apt-get update && \
+    apt-get install -y bash 
 
 ENV NEO4J_SHA256=6901832c63bb3d9af150a1c3da3a88a4d15ad4b4a130611df138648d4c25f1a8 \
     NEO4J_TARBALL=neo4j-enterprise-3.3.3-unix.tar.gz \
@@ -21,8 +20,8 @@ RUN curl --fail --silent --show-error --location --remote-name ${NEO4J_URI} \
     && mv /var/lib/neo4j-* /var/lib/neo4j \
     && rm ${NEO4J_TARBALL} \
     && mv /var/lib/neo4j/data /data \
-    && ln -s /data /var/lib/neo4j/data \
-    && apk del curl
+    && ln -s /data /var/lib/neo4j/data 
+
 
 ENV PATH /var/lib/neo4j/bin:$PATH
 
