--- a/creTest/Dockerfile
+++ b/creTest/Dockerfile
@@ -3,7 +3,7 @@ FROM tamboraorg/crenginx
 #Adapted from https://github.com/jwilder/nginx-proxy
 
 RUN mkdir -p /app && touch /app/versions.txt && \
-    echo "$(date +'%F %R') \t creProxy \t " >> /app/versions.txt
+    echo "$(date +'%F %R') \t creTest \t " >> /app/versions.txt
 
 RUN add-apt-repository ppa:certbot/certbot; apt-get update; apt-get install -y openssl python-certbot-nginx
 RUN wget https://dl.eff.org/certbot-auto && \
