--- a/creTest/app/Procfile
+++ b/creTest/app/Procfile
@@ -1,2 +1,3 @@
 dockergen: docker-gen -watch -notify "nginx -s reload" /app/nginx.tmpl /etc/nginx/conf.d/default.conf
+certbot: docker-gen -watch -notify "touch /app/mk.txt" /app/certbot.sh.tmpl /app/certbot.sh 
 nginx: nginx
