--- a/creProxy/app/Procfile
+++ b/creProxy/app/Procfile
@@ -1,2 +1,3 @@
+proxy: docker-gen -watch /app/proxy.tmpl /etc/nginx/conf.d/default2.conf
 dockergen: docker-gen -watch -notify "nginx -s reload" /app/nginx.tmpl /etc/nginx/conf.d/default.conf
 nginx: nginx
