--- a/creProxy/app/Procfile
+++ b/creProxy/app/Procfile
@@ -1,5 +1,5 @@
-https: docker-gen -watch /app/openssl.sh.tmpl /app/openssl.sh
-openssl: docker-gen -watch -notify "/app/openssl.sh" /app/openssl.cfg.tmpl /app/openssl.cfg
-proxy: docker-gen -watch /app/proxy.tmpl /etc/nginx/conf.d/default2.conf
-dockergen: docker-gen -watch -notify "nginx -s reload" /app/nginx.tmpl /etc/nginx/conf.d/default.conf
+https: docker-gen -watch /app/openssl.cfg.tmpl /app/openssl.cfg
+openssl: docker-gen -watch -notify "/app/openssl.sh" /app/openssl.sh.tmpl /app/openssl.sh
+dockergen: docker-gen -watch -notify "nginx -s reload" /app/nginx.tmpl /etc/nginx/conf.d/default.conf.old
+proxy: docker-gen -watch -notify "nginx -s reload" /app/proxy.tmpl /etc/nginx/conf.d/default.conf
 nginx: nginx
