--- a/creProxy/Dockerfile
+++ b/creProxy/Dockerfile
@@ -5,17 +5,23 @@ FROM tamboraorg/crenginx
 RUN mkdir -p /app && touch /app/versions.txt && \
     echo "$(date +'%F %R') \t creProxy \t " >> /app/versions.txt
 
+# Fix issue due to server_names_hash_bucket_size
+# see also proxy.tmpl -  https://github.com/certbot/certbot/issues/5199
+RUN sed -i 's/# server_names_hash_bucket_size 64/server_names_hash_bucket_size 128/' /etc/nginx/nginx.conf && \
+    sed -i 's/# server_names_hash_bucket_size/server_names_hash_bucket_size/' /etc/nginx/nginx.conf
+
 RUN add-apt-repository ppa:certbot/certbot; apt-get update; apt-get install -y openssl python-certbot-nginx
 RUN wget https://dl.eff.org/certbot-auto && \
     mv certbot-auto /usr/local/bin/ && \
     chmod 755 /usr/local/bin/certbot-auto
 # RUN /usr/local/bin/certbot-auto --noninteractive --install-only   
-RUN /usr/local/bin/certbot-auto --noninteractive --version  
+#RUN /usr/local/bin/certbot-auto --noninteractive --version  
 
 RUN echo "$(date +'%F %R') \t  $(openssl version)" >> /app/versions.txt
 RUN echo "$(date +'%F %R') \t  $(/usr/local/bin/certbot-auto --version 2>&1)" >> /app/versions.txt
 
-# /usr/local/bin/cerbot-auto --no-self-upgrade ; certbot --nginx
+# /usr/local/bin/certbot-auto --no-self-upgrade ; 
+# certbot --noninteractive --nginx --agree-tos -m mail@domain.tld --domains domain.tld
  
 COPY app/network_internal.conf /etc/nginx/
 
