Rename app directory to CRE

--- a/creUbuntu/Dockerfile
+++ b/creUbuntu/Dockerfile
@@ -7,12 +7,12 @@
 # Pull base image.
 FROM ubuntu:16.04
 
-ENV CRE_VERSION 2016.0
+ENV CRE_VERSION 2010.0
 ENV UBUNTU_VERSION 16.04
 ENV DOCKER_GEN_VERSION 0.7.4
 
-RUN mkdir -p /app && touch /app/versions.txt && \
-    echo "$(date +'%F %R') \t creUbuntu \t $(cat /usr/lib/os-release | grep PRETTY | sed -e "s/^PRETTY_NAME=\"Ubuntu //" -e "s/\"$//")" >> /app/versions.txt
+RUN mkdir -p /cre && touch /cre/versions.txt && \
+    echo "$(date +'%F %R') \t creUbuntu \t $(cat /usr/lib/os-release | grep PRETTY | sed -e "s/^PRETTY_NAME=\"Ubuntu //" -e "s/\"$//")" >> /cre/versions.txt
 
 # Install.
 RUN \
@@ -36,7 +36,7 @@ RUN wget https://github.com/jwilder/docker-gen/releases/download/$DOCKER_GEN_VER
  && tar -C /usr/local/bin -xvzf docker-gen-linux-amd64-$DOCKER_GEN_VERSION.tar.gz \
  && rm /docker-gen-linux-amd64-$DOCKER_GEN_VERSION.tar.gz
 
-RUN echo "$(date +'%F %R') \t  docker-gen \t $(docker-gen -version)" >> /app/versions.txt
+RUN echo "$(date +'%F %R') \t  docker-gen \t $(docker-gen -version)" >> /cre/versions.txt
 
 # Copy shoremen to handle Procfile (Process Managment)
 COPY shoreman.sh /usr/local/bin/shoreman
