Rename app directory to CRE

--- a/creProxy/Dockerfile
+++ b/creProxy/Dockerfile
@@ -2,8 +2,8 @@ FROM tamboraorg/crenginx
  
 #Adapted from https://github.com/jwilder/nginx-proxy
 
-RUN mkdir -p /app && touch /app/versions.txt && \
-    echo "$(date +'%F %R') \t creProxy \t " >> /app/versions.txt
+RUN mkdir -p /cre && touch /cre/versions.txt && \
+    echo "$(date +'%F %R') \t creProxy \t " >> /cre/versions.txt
 
 # Fix issue due to server_names_hash_bucket_size
 # see also proxy.tmpl -  https://github.com/certbot/certbot/issues/5199
@@ -17,20 +17,20 @@ RUN wget https://dl.eff.org/certbot-auto && \
 # RUN /usr/local/bin/certbot-auto --noninteractive --install-only   
 #RUN /usr/local/bin/certbot-auto --noninteractive --version  
 
-RUN echo "$(date +'%F %R') \t  $(openssl version)" >> /app/versions.txt
-RUN echo "$(date +'%F %R') \t  $(/usr/local/bin/certbot-auto --version 2>&1)" >> /app/versions.txt
+RUN echo "$(date +'%F %R') \t  $(openssl version)" >> /cre/versions.txt
+RUN echo "$(date +'%F %R') \t  $(/usr/local/bin/certbot-auto --version 2>&1)" >> /cre/versions.txt
 
 # /usr/local/bin/certbot-auto --no-self-upgrade ; 
 # certbot --noninteractive --nginx --agree-tos -m mail@domain.tld --domains domain.tld
  
 COPY app/network_internal.conf /etc/nginx/
 
-COPY app /app
-WORKDIR /app/
+COPY app /cre
+WORKDIR /cre/
 
 ENV DOCKER_HOST unix:///tmp/docker.sock
 
 VOLUME ["/etc/nginx/certs", "/etc/nginx/dhparam"]
 
-ENTRYPOINT ["/app/docker-entrypoint.sh"]
-CMD ["shoreman", "/app/Procfile"]
+ENTRYPOINT ["/cre/docker-entrypoint.sh"]
+CMD ["shoreman", "/cre/Procfile"]
