--- a/creProxy/app/Procfile
+++ b/creProxy/app/Procfile
@@ -1,5 +1,5 @@
-https: docker-gen -watch /app/openssl.cfg.tmpl /app/openssl.cfg
-openssl: docker-gen -watch -notify "/app/openssl.sh" /app/openssl.sh.tmpl /app/openssl.sh
-dockergen: docker-gen -watch -notify "nginx -s reload" /app/nginx.tmpl /etc/nginx/conf.d/default.conf.old
-proxy: docker-gen -watch -notify "nginx -s reload" /app/proxy.tmpl /etc/nginx/conf.d/default.conf
+https: docker-gen -watch /cre/openssl.cfg.tmpl /cre/openssl.cfg
+openssl: docker-gen -watch -notify "/cre/openssl.sh" /cre/openssl.sh.tmpl /cre/openssl.sh
+dockergen: docker-gen -watch /cre/nginx.tmpl /etc/nginx/conf.d/default.conf.old
+proxy: docker-gen -watch -notify "nginx -s reload" /cre/proxy.tmpl /etc/nginx/conf.d/default.conf
 nginx: nginx
