Add ant to jenkins

--- a/creJenkins/Dockerfile
+++ b/creJenkins/Dockerfile
@@ -16,15 +16,15 @@ ENV LANG en_US.UTF-8
 RUN wget -q -O - https://pkg.jenkins.io/debian/jenkins-ci.org.key | apt-key add - && \
     echo deb https://pkg.jenkins.io/debian-stable binary/ | tee /etc/apt/sources.list.d/jenkins.list
 
-
 RUN apt-get update && \
-    apt-get install --no-install-recommends -y jenkins && \
+    apt-get install --no-install-recommends -y openjdk-8-jdk jenkins ant && \
     apt-get clean && \
     rm -rf /var/lib/apt/lists/* && \
     update-rc.d -f jenkins disable 
 
 RUN mkdir -p /cre && touch /cre/versions.txt && \ 
-    echo "$(date +'%F %R') \t creJenkins \t $(java -jar /usr/share/jenkins/jenkins.war --version)" >> /cre/versions.txt 
+    echo "$(date +'%F %R') \t creJenkins \t $(java -jar /usr/share/jenkins/jenkins.war --version)" >> /cre/versions.txt && \ 
+    echo "$(date +'%F %R') \t creJenkins \t $(ant -version)" >> /cre/versions.txt 
 
 ENV JENKINS_HOME /var/jenkins
 
