--- a/creJava/Dockerfile
+++ b/creJava/Dockerfile
@@ -12,9 +12,10 @@ MAINTAINER Michael Kahle <michael.kahle@yahoo.de>
 ENV DEBIAN_FRONTEND noninteractive 
 ENV INITRD No
 ENV LANG en_US.UTF-8
+ENV JAVA_VERSION 8
 
 RUN apt-get update && \
-    apt-get install --no-install-recommends -y openjdk-8-jre-headless && \
+    apt-get install --no-install-recommends -y openjdk-$JAVA_VERSION-jre-headless && \
     apt-get clean && \
     rm -rf /var/lib/apt/lists/*
 
