--- a/crePhp/cre/php-nginx.conf
+++ b/crePhp/cre/php-nginx.conf
@@ -59,7 +59,7 @@ server {
             fastcgi_param modHeadersAvailable true;
             fastcgi_param SCRIPT_FILENAME $document_root$1;
             fastcgi_param PATH_INFO $2;
-            fastcgi_pass cre-php:9000;
+            fastcgi_pass crephp:9000;
         }
 
         location ~* ^.+\.(jpg|jpeg|gif|bmp|ico|png|css|js|swf)$ {
@@ -69,7 +69,7 @@ server {
 
 
     location ~ \.php$ {
-        fastcgi_pass cre-php:9000;
+        fastcgi_pass crephp:9000;
         fastcgi_index index.php;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         fastcgi_param PHP_VALUE "error_log=/var/log/nginx/clima_php_errors.log";
