--- a/creJava/Dockerfile
+++ b/creJava/Dockerfile
@@ -9,6 +9,8 @@ FROM tamboraorg/creubuntu:2010.0
 
 MAINTAINER Michael Kahle <michael.kahle@yahoo.de>
 
+# version: yyyy.n for stable versions / 0.yyyy for development
+ENV CRE_VERSION 0.2010 
 ENV DEBIAN_FRONTEND noninteractive 
 ENV INITRD No
 ENV LANG en_US.UTF-8
