--- a/creNginx/Dockerfile
+++ b/creNginx/Dockerfile
@@ -7,6 +7,9 @@
 # Pull base image.
 FROM tamboraorg/creubuntu:2010.0
 
+# version: yyyy.n for stable versions / 0.yyyy for development
+ENV CRE_VERSION 0.2010 
+
 # Install Nginx
 RUN \
   add-apt-repository -y ppa:nginx/stable && \
