--- a/creJenkins/Dockerfile
+++ b/creJenkins/Dockerfile
@@ -34,10 +34,9 @@ RUN curl -sL https://deb.nodesource.com/setup_10.x | bash - && \
 
 # Install yarn
 ## Ubuntu 17 maybe needs: apt remove cmdtest 
-RUN curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | apt-key add - && \
-    echo "deb https://dl.yarnpkg.com/debian/ rc main" | tee /etc/apt/sporces.list.d/yarn.list && \
-    apt-get update && apt-get install yarn && \
-    apt-get clean
+RUN curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | apt-key add - 
+RUN echo "deb https://dl.yarnpkg.com/debian/ rc main" | tee /etc/apt/sources.list.d/yarn.list 
+RUN apt-get update && apt-get install yarn && apt-get clean
 
 RUN mkdir -p /cre && touch /cre/versions.txt && \ 
     echo "$(date +'%F %R') \t creJenkins \t $(java -jar /usr/share/jenkins/jenkins.war --version)" >> /cre/versions.txt && \ 
